--- a/AgricultureShop/app/src/main/res/layout/activity_farmer_login.xml
+++ b/AgricultureShop/app/src/main/res/layout/activity_farmer_login.xml
@@ -5,69 +5,69 @@
     android:id="@+id/userPWD"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#82EC87"
     tools:context=".FarmerLoginActivity">
 
     <TextView
-        android:id="@+id/usernameTV"
-        android:layout_width="117dp"
-        android:layout_height="62dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="80dp"
+        android:id="@+id/textView2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="134dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="52dp"
         android:gravity="center|center_horizontal"
         android:text="User Name"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintEnd_toStartOf="@+id/farmerTXT"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.088" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/farmerTXT"
-        android:layout_width="231dp"
-        android:layout_height="57dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="52dp"
-        android:layout_marginEnd="19dp"
-        android:layout_marginBottom="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="31dp"
+        android:layout_marginBottom="626dp"
         android:ems="10"
         android:hint="Enter User Name"
         android:inputType="text"
-        app:layout_constraintBottom_toTopOf="@+id/farmerET"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/usernameTV"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <TextView
-        android:id="@+id/passwordTV"
-        android:layout_width="111dp"
-        android:layout_height="65dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="34dp"
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginEnd="23dp"
         android:layout_marginBottom="537dp"
         android:gravity="center"
         android:text="Password"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
-
+        app:layout_constraintEnd_toStartOf="@+id/farmerPWD"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/usernameTV"
-        app:layout_constraintVertical_bias="0.578" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
-        android:id="@+id/farmerET"
-        android:layout_width="208dp"
-        android:layout_height="62dp"
+        android:id="@+id/farmerPWDField"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="37dp"
         android:ems="10"
-        android:hint="Enter Password"
         android:inputType="textPassword"
-        app:layout_constraintBaseline_toBaselineOf="@+id/passwordTV"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/passwordTV" />
+        app:layout_constraintStart_toEndOf="@+id/textView" />
 
     <TextView
-        android:id="@+id/loginTV"
+        android:id="@+id/textView5"
         android:layout_width="120dp"
         android:layout_height="0dp"
         android:layout_marginTop="68dp"
@@ -77,7 +77,6 @@
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/farmerTXT"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.154"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -97,8 +96,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
-        android:layout_marginTop="44dp"
-        app:layout_constraintStart_toStartOf="@id/farmerET"
-        app:layout_constraintTop_toBottomOf="@id/farmerET" />
+        android:layout_marginTop="24dp"
+        app:layout_constraintStart_toStartOf="@id/farmerPWDField"
+        app:layout_constraintTop_toBottomOf="@id/farmerPWDField" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
